package ma.newdev.rh.entity;

public enum EvaluationPeriodStatus {
    ACTIVE,
    CLOTUREE
}
